--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>CrudAngular</title>
-  <base href="https://sidharthjaiswal.github.io/shoppinglist/">  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Angular</title>
+  <base href="/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.c06a246201ece1e1c0bc.css"></head>
+<link rel="stylesheet" href="styles.css"></head>
 <body>
   <app-root></app-root>
-<script src="runtime.e227d1a0e31cbccbf8ec.js" defer></script><script src="polyfills.a4021de53358bb0fec14.js" defer></script><script src="main.e92985b3d2d3b171b37d.js" defer></script></body>
+<script src="runtime.js" defer></script><script src="polyfills.js" defer></script><script src="vendor.js" defer></script><script src="main.js" defer></script></body>
 </html>
