--- a/angular/src/index.html
+++ b/angular/src/index.html
@@ -6,6 +6,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link  href="https://bootswatch.com/4/flatly/bootstrap.min.css">
 </head>
 <body>
   <app-root></app-root>
