--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -9,6 +9,7 @@
   <link href="https://bootswatch.com/4/flatly/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&amp;display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
 <link rel="stylesheet" href="styles.css"></head>
 <body class="mat-typography">
   <app-root></app-root>
